--- a/README.rdoc
+++ b/README.rdoc
@@ -8,7 +8,7 @@ A simple daemon that polls for updated Twitter statuses and posts them to a Camp
 
 Install the gem:
 
-  sudo gem install bdainton-camptweet -s http://gems.github.com
+  sudo gem install bdainton-camptweet -s http://gems.github.com/
   
 From the commandline, run:
 
