--- a/README.rdoc
+++ b/README.rdoc
@@ -8,9 +8,7 @@ A simple daemon that polls for updated Twitter statuses and posts them to a Camp
 
 Install the gem and its dependencies:
 
-  sudo gem install twitter4r
-  sudo gem install tinder
-  sudo gem install bdainton-camptweet -s http://gems.github.com/
+  sudo gem install camptweet
   
 From the commandline, run:
 
