--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.8.4. Avoid Twitter throttling by dynamically altering the polling interval.
+
 v0.8.3. Added support for broadcasting Twitter (Summize) search results and other RSS feed results to Campfire. 
 
 v0.8.2. Attempt automatic Twitter reconnects. 
